# kio-extras

./: CMakeLists.txt  kio-extras.categories
afc/: CMakeLists.txt  afc.json  afcdevice.cpp  afcdevice.h  afcdiskusage.cpp  afcdiskusage.h  afcfilereader.cpp  afcfilereader.h  afcresult.cpp  afcresult.h  afcurl.cpp  afcurl.h  kio_afc.cpp  kio_afc.h
bookmarks/: kio_bookmarks.cpp
cmake/: FindIMobileDevice.cmake  FindPList.cmake
